working select2 in tag search view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,7 +20,7 @@
 @import "textbooks";
 @import "textbook_pages";
 @import "users";
-
+@import "select2";
 @import "tag_searches";
 
 /* CSS RESET */
