--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -219,6 +219,29 @@
   li {
     display: inline-block;
     margin-bottom: 0.5rem;
+    position: relative;
+  }
+
+  li:hover input,
+  li:active input {
+    opacity: 1;
+  }
+
+  input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 1rem;
+    height: 1rem;
+    border-radius: 1000px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $warning;
+    vertical-align: text-top;
+    border: none;
+    opacity: 0.25;
+    cursor:pointer;
   }
 }
 
