--- a/app/views/taggings/_form.html.haml
+++ b/app/views/taggings/_form.html.haml
@@ -2,6 +2,7 @@
   .add-tagging.mt-2{"id" => "add-tagging-activity-#{@activity.id}"}
     = form_for(@tagging, remote: true) do |f|
       %small= t('.add-tagging')
-      = f.collection_select :tag_id, Tag.all, :id, :name, {}, class: 'form-control'
+      -# replace the following select with tag searches select2 partial and change name to match "tagging[tag_id]"
+      = f.collection_select :tag_id, Tag.all, :id, :name, {}, class: 'form-control' 
       = f.hidden_field :activity_id, value: @activity.id
       = f.submit t('.add-tag-button'), class: "btn btn-primary"
