--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -30,7 +30,7 @@
     %p= t('.tag_directions_1')
     %p= t('.tag_directions_2')
     .activity-form-tag-picker
-      = render 'tag_searches/select2'
+      =select_tag "activity[tag_ids][]", option_groups_from_collection_for_select(@tag_categories, :tags, :name, :id, :name), multiple: true, id: "tag-search-select"
       %ul.activity-form-tag-categories
         - @tag_categories.each do |category|
           %li.form-tag-category
