--- a/app/views/taggings/_activity_tagging_list.html.haml
+++ b/app/views/taggings/_activity_tagging_list.html.haml
@@ -1,5 +1,5 @@
 - @activity_taggings.each do |tagging|
-  %li
+  %li{"data-id": "#{tagging.tag.id}"}
     = link_to tagging.tag.name, tagging.tag, class: "activity-tag"
     %span
       = form_for( tagging, html: { method: :delete, data: {confirm: "You are about to remove this tag from the activity. Are you sure?"} }, remote: true) do |f|
