--- a/app/views/taggings/_form.html.haml
+++ b/app/views/taggings/_form.html.haml
@@ -3,6 +3,6 @@
     = form_for(@tagging, remote: true) do |f|
       %small= t('.add-tagging')
       -# replace the following select with tag searches select2 partial and change name to match "tagging[tag_id]"
-      =select_tag "tagging[tag_id]", option_groups_from_collection_for_select(TagCategory.all.includes(:tags), :tags, :name, :id, :name), id: "tag-search-select"
+      =select_tag "tagging[tag_id]", option_groups_from_collection_for_select(TagCategory.all.includes(:tags), :tags, :name, :id, :name), id: "edit-tag-search-select"
       = f.hidden_field :activity_id, value: @activity.id
       = f.submit t('.add-tag-button'), class: "btn btn-primary"
