Make lots of view edits based on live site data

--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -100,6 +100,9 @@
     list-style: disc;
     margin: 0 0 1.3rem 1.5rem;
   }
+  ol {
+    margin: 0 0 1.3rem 1.5rem;
+  }
 }
 
 .activity-file-list {
