--- a/app/views/activity_searches/show.html.haml
+++ b/app/views/activity_searches/show.html.haml
@@ -1,7 +1,7 @@
 - provide(:title, "ALTopedia - Search")
 
 .full-generic-page
-  %h2.text-center Search results
+  %h2 Search results
   %p You searched for "#{params[:search]}"
   - if @tags.any?
     %h3 Matching tags
