--- a/app/views/tags/edit.html.haml
+++ b/app/views/tags/edit.html.haml
@@ -1,5 +1,6 @@
-- provide(:title, "Edit Tag")
+- provide(:title, "ALTopedia - Edit Tag")
 
-%h3 Edit this Tag
+.full-tag-display
+  %h3 Edit this Tag
 
-= render "form"
+  = render "form"
