--- a/app/views/tags/new.html.haml
+++ b/app/views/tags/new.html.haml
@@ -1,7 +1,8 @@
-- provide(:title, "New Tag")
+- provide(:title, "ALTopedia - Make a new tag")
 
-%h3 New Tag
+.full-tag-display
+  %h2 New Tag
 
-%p Please create new tags sparingly - If we add too many tags, the lists become difficult to navigate and people are less likely to find all the relevant tags for their activity.
+  %p This will make a new tag! Be careful not to clutter up the site with too many!
 
-= render "form"
+  = render "form"
