--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -293,8 +293,9 @@ footer {
   flex-direction: column;
   justify-content: center;
   align-content: center;
-  max-width: 60vw;
-  padding: 1rem 20vw;
+  width: 70vw;
+  padding: 1rem;
+  text-align: center;
   margin-top: 0.5rem;
   border-radius: 0.5rem;
   @include card-shadow;
@@ -352,6 +353,7 @@ footer {
   flex-direction: row;
   justify-content: space-evenly;
   font-size: 0.8rem;
+  width: 40vw;
   a {
     text-decoration: none;
     color: $ru500;
