--- a/app/assets/stylesheets/site_pages.scss.erb
+++ b/app/assets/stylesheets/site_pages.scss.erb
@@ -56,6 +56,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-left: 0.5rem;
 }
 
 .fp-edit-profile-link {
