--- a/app/views/site_pages/special_needs.html.haml
+++ b/app/views/site_pages/special_needs.html.haml
@@ -2,4 +2,4 @@
 
 .full-generic-page
   %h2= t('.special-needs-heading')
-  = render partial: 'activities/school_level_activity_list', locals: { explanation: t('.special-needs-explanation'), textbooks: @textbooks, activities: @special_needs_activities }
+  = render partial: 'activities/school_level_activity_list', locals: { explanation: t('.special-needs-explanation'), textbooks: @textbooks, activities: @sn_activities }
