--- a/app/views/site_pages/contribute.html.haml
+++ b/app/views/site_pages/contribute.html.haml
@@ -14,9 +14,7 @@
 
   %h4= link_to t('.textbook-info-heading'), contact_path
   %p= t('.textbook-info-explanation')
-
-  %h4= link_to t('.grammar-heading'), contact_path
-  %p= t('.grammar-explanation')
+  %p= link_to "How to Contribute Textbook Information", "https://youtu.be/mzmtvX00oKk"
 
   %h4= link_to t('.comment-heading'), new_user_registration_path
   %p= t('.comment-explanation')
