--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -92,9 +92,15 @@
   order: 1;
   margin-bottom: 1rem;
 
+  h1 {
+    font-size: 1.4rem;
+    line-height: 1.6rem;
+    margin-bottom: 0.4rem;
+  }
   h2 {
-    font-size: 1.3rem;
-    line-height: 1.5rem;
+    font-size: 1.2rem;
+    line-height: 1.3rem;
+    margin-bottom: 0.4rem;
   }
   ul {
     list-style: disc;
