--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -50,6 +50,6 @@
     %p All content is provided under the #{link_to "Creative Commons Attribution-NonCommercial-ShareAlike 4.0 License",  "https://creativecommons.org/licenses/by-nc-sa/4.0/"}.
   
 
-= render partial: 'comments/comment_list', locals: { comments: @comments }
+= render partial: 'comments/comment_list', locals: { comments: @comments, show_source: false }
 
 = render partial: 'comments/form', locals: { commentable_type: "Activity", commentable_id: @activity.id }
