--- a/app/views/front_page_posts/show.html.haml
+++ b/app/views/front_page_posts/show.html.haml
@@ -19,5 +19,5 @@
       %li= link_to "Delete", @front_page_post, method: :delete, data: { confirm: "Delete this post?" }
 
 
-= render partial: 'comments/comment_list', locals: { comments: @comments }
+= render partial: 'comments/comment_list', locals: { comments: @comments, show_source: false }
 = render partial: 'comments/form', locals: { commentable_type: "FrontPagePost", commentable_id: @front_page_post.id }
