--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -5,9 +5,8 @@
   = link_to t('layouts.contributors'), contributors_path, class: "footer-link"
   -# = link_to "Support the site", root_url, class: "footer-link"
 .footer-section
-  %h3
-  -# = link_to t('layouts.grammar'), grammar_path, class: "footer-link"
-  -# = link_to t('layouts.themes'), themes_path, class: "footer-link"
+  = link_to t('layouts.grammar'), grammar_path, class: "footer-link"
+  = link_to t('layouts.themes'), themes_path, class: "footer-link"
 .footer-section
   %h3 Community
   = link_to "Discord", "https://discord.gg/KTPmKJk", class: "footer-link"
