--- a/app/views/site_pages/grammar.html.haml
+++ b/app/views/site_pages/grammar.html.haml
@@ -1,15 +1,14 @@
 - provide(:title, t('.title'))
 
 .full-generic-page
-  %h4 This page hasn't been rebuilt with the new interface yet. It still works, but it looks messy. It will get looked at soon. Sorry for the inconvenience!
 
-  %h3= t('.grammar-heading')
+  %h2= t('.grammar-heading')
+
+  %ul.tag-card-list
+    - @tags.each do |tag|
+      %li.tag-card
+        = link_to tag, title: tag.description do
+          %p.tag-card-name= tag.name
+          .tag-card-description= markdown(tag.description)
 
   %p= link_to t('.all-tags'), all_tags_path
-
-  %p This list is still quite incomplete! Please let us know if we're missing any significant grammar points, or any of the grammar points have inaccurate information.
-
-  - @tags.each do |tag|
-    .card
-      .card-body
-        %p= link_to markdown("#{tag.name_for_lists}"), tag
