--- a/app/assets/stylesheets/tag_searches.scss
+++ b/app/assets/stylesheets/tag_searches.scss
@@ -4,10 +4,6 @@
 
 @import "variables_and_mixins";
 
-.select2-container {
-    padding: 5px;
-}
-
 .category-tag-grid {
     display:grid;
     grid-template-columns: repeat(auto-fill, minmax(48%, 1fr));
@@ -82,4 +78,19 @@
     padding: 0.2rem 0.5rem;
     margin: 0.2rem 0;
     cursor: pointer;
+}
+
+.tagging-submit-button {
+    text-align: center;
+    background: linear-gradient(to top right, $primary700, $primary800);
+    padding: 0.4rem;
+    color: #fefefe;
+    border: none;
+    border-radius: 0.4rem;
+    font-size: 0.9rem;
+    box-shadow: 0.2rem 0.2rem 0.2rem $ru400;
+}
+.tagging-submit-button:hover {
+    cursor: pointer;
+    background: $primary900;
 }
