--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -20,6 +20,10 @@
             %p.read-more-link= t('.read-more')
       %p.fp-post-index-link= link_to t('.front-page-posts-index'), front_page_posts_path
   .fp-callouts
+    .callout
+      %p.card-title Are you a new ALT?
+      %p Get an overview of the job and the industry:
+      %p= link_to "ALT Crash Course video", "https://www.youtube.com/watch?v=_0VU53GKVZ4"
     = render "tag_of_the_moment"
     - if user_signed_in?
       .fp-user-card
