Fix some IE11 CSS issues

--- a/app/assets/stylesheets/site_pages.scss.erb
+++ b/app/assets/stylesheets/site_pages.scss.erb
@@ -252,10 +252,12 @@
 
   .school-explanation {
     flex: 2;
+    min-width: 20rem; // IE11 fix
   }
 
   .school-level-activity-list {
     flex: 3;
+    min-width: 30rem; // IE11 fix
   }
 }
 
