Add some new fields to Users

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,6 +66,10 @@
   color: $user700;
 }
 
+.supporter-text {
+  color: $user800;
+}
+
 .user-control-items {
   margin-top: 1rem;
   align-self: center;
