--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,9 +1,9 @@
 -provide(:title, t('.title'))
 
--# Not splitting this out into a partial yet - User creation and user editing will need to look different
-
 .full-user-display
   %h1= t('.heading')
+
+  %p= t('.profile-instructions')
 
   = form_with model: @user, class: "user-edit-form" do |f|
     = render 'shared/error_messages', object: f.object
@@ -15,8 +15,18 @@
     = f.text_field :home_country, class: 'form-textfield', maxlength: 30
     = f.label :location, t('.location'), class: "form-label"
     = f.text_field :location, class: 'form-textfield', maxlength: 30
+    = f.label :teaching_history, t('.teaching-history'), class: "form-label"
+    = f.text_area :teaching_history, class: 'form-textarea', maxlength: 300, rows: 2
     = f.label :bio, t('.bio'), class: "form-label"
-    = f.text_area :bio, class: 'form-textarea', maxlength: 200, rows: 6
+    = f.text_area :bio, class: 'form-textarea', maxlength: 500, rows: 6
+    %ul.user-preferences
+      %li.user-preference
+        = f.check_box :display_favorites, class: "preference-checkbox"
+        = f.label :display_favorites, "Show my favorites on my profile"
+      - if current_user.admin?
+        %li.user-preference
+          = f.check_box :initial_premium, class: "preference-checkbox"
+          = f.label :initial_premium, "Premium member (manual setting)"
 
     = f.submit t('submit'), class: "submit-button"
 
