Add in an Explanation field for Tags

--- a/app/assets/stylesheets/tags.scss
+++ b/app/assets/stylesheets/tags.scss
@@ -23,6 +23,11 @@
     }
 }
 
+.full-tag-description p {
+  text-align: center;
+  font-size: 1.1rem;
+}
+
 .tag-card-list {
   display: flex;
   flex-direction: row;
