Add instructions and suggested max to Tag Categories

--- a/app/assets/stylesheets/activities.scss
+++ b/app/assets/stylesheets/activities.scss
@@ -394,9 +394,10 @@
   text-align: center;
 }
 
-.form-tag-category-guidelines {
+.form-tag-category-instructions p {
   text-align: center;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.7rem;
+  color: $tag900;
 }
 
 .form-tag-category {
