--- a/app/assets/stylesheets/variables_and_mixins.scss
+++ b/app/assets/stylesheets/variables_and_mixins.scss
@@ -56,6 +56,7 @@ $desktop_breakpoint: 70rem;
   margin-top: 1rem;
   margin-bottom: 2rem;
   box-shadow: 0.3rem 0.3rem 0.3rem $ru300;
+  max-width: 95vw;
 
   border-radius: 3px;
   background-color: #fbfbfb;
