--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -4,7 +4,7 @@
   %h1= @user.username
   .user-profile
     .user-profile-primary-info
-      = image_tag "general avatar.png", size: "100x100", class: "user-profile-image"
+      = render partial: "users/avatar", locals: { user: @user, size: "100" }
       - if @user.admin?
         %span.profile-user-status
           %span.moderator-text Administrator
