--- a/app/views/site_pages/contributors.html.haml
+++ b/app/views/site_pages/contributors.html.haml
@@ -7,7 +7,7 @@
   .top-contributor-display
     - @top6.each do |user|
       .top-contributor-card
-        = link_to (image_tag "sample avatar.png", size: "100x100", class: "user-profile-image"), user
+        = link_to (render partial: "users/avatar", locals: { user: user, size: "100" }), user
         .contributor-info
           = link_to user.username, user, class: "top-contributor-link"
           %span #{user.activity_count} activities
