--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -21,13 +21,11 @@
       %p.fp-post-index-link= link_to t('.front-page-posts-index'), front_page_posts_path
   .fp-callouts
     .callout
-      %p.card-title Are you a new ALT?
-      %p Get an overview of the job and the industry:
-      %p= link_to "ALT Crash Course video", "https://www.youtube.com/watch?v=_0VU53GKVZ4"
-    = render "tag_of_the_moment"
+      %p.card-title Do you need an activity for class?
+      %p= link_to "Start by checking out your textbook's listings.", textbooks_path
+    -# = render "tag_of_the_moment"
     - if user_signed_in?
       .fp-user-card
-        -# = link_to image_tag("general avatar.png", size: "70x70"), current_user
         = render partial: "users/avatar", locals: { user: current_user, size: "70"}
         .fp-user-controls
           %span Welcome back, #{link_to current_user.username, current_user}!
