Update the Resources page

--- a/app/views/site_pages/resources.html.haml
+++ b/app/views/site_pages/resources.html.haml
@@ -37,7 +37,14 @@
         %li= link_to "English Grammar Online", "https://www.ego4u.com/en/cram-up/grammar"
         %li= link_to "Flagpedia", "https://flagpedia.net"
         %li= link_to "Tay's Teaching Toolkit", "https://www.taysteachingtoolkit.com"
+        %li= link_to "Grammar Monster", "https://www.grammar-monster.com/grammar_terms_and_definitions.htm"
         %li= link_to "All ESL", "https://allesl.com"
+    .link-collection
+      %h3 Colin's games
+      %ul
+        %li= link_to "flipGET", "https://flipget.app/"
+        %li= link_to "Ey-go", "https://ey-go-d3cd0.web.app/"
+        %li= link_to "Phonix", "https://mighty-chamber-55300.herokuapp.com/"
     .link-collection
       %h3 Living in Japan
       %ul
