--- a/app/assets/stylesheets/site_pages.scss.erb
+++ b/app/assets/stylesheets/site_pages.scss.erb
@@ -185,6 +185,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  overflow: auto; // IE11
 
   h1, h2 {
     align-self: center;
@@ -198,6 +199,7 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  max-width: 80vw; // IE11
 }
 
 .link-collection {
