--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -14,7 +14,7 @@
       %p.fp-news-header News
       - @top_posts.each do |post|
         .news-card
-          = link_to post do
+          = link_to posts_path(post) do
             %p.news-headline= post.title
             %p.news-excerpt= post.excerpt
             %p.read-more-link= t('.read-more')
