--- a/app/views/activities/_activity_form.html.haml
+++ b/app/views/activities/_activity_form.html.haml
@@ -32,14 +32,14 @@
       =select_tag "activity[tag_ids][]", option_groups_from_collection_for_select(@tag_categories, :tags, :name, :id, :name), multiple: true, id: "tag-search-select"
       %ul.activity-form-tag-categories
         - @tag_categories.each do |category|
-          %li.form-tag-category{ "suggested_max" => category.suggested_max }
+          %li.form-tag-category
             %p.form-tag-category-name= category.name
             - unless category.instruction.nil?
               .form-tag-category-instructions= markdown(category.instruction)
-            %ul.form-tag-list{data:{ catid: "#{category.id}"}}
+            %ul.form-tag-list{data:{ catid: "#{category.id}", suggested_max: "#{category.suggested_max}"}}
               = f.collection_check_boxes(:tag_ids, category.tags, :id, :name_for_lists) do |tag|
                 %li.form-tag
-                  = tag.check_box(class: "form-tag-checkbox")
+                  = tag.check_box(class: "form-tag-checkbox", data: {catid: "#{category.id}"})
                   = tag.label do 
                     %span.form-tag-name #{tag.text.split('##')[0]} -
                     = markdown(tag.text.split('##')[1])
