--- a/app/views/site_pages/jhs.html.haml
+++ b/app/views/site_pages/jhs.html.haml
@@ -2,6 +2,6 @@
 
 .full-generic-page
   %h2= t('.jhs-heading')
-  = render partial: 'activities/school_level_activity_list', locals: { explanation: t('.jhs-explanation'), textbooks: @textbooks, activities: @jhs_activities }
+  = render partial: 'activities/school_level_activity_list', locals: { explanation: t('.jhs-explanation'), textbooks: @textbooks, old_textbooks: @old_textbooks, activities: @jhs_activities }
 
 
