added link select field to activity page, fixed issue with multiple tag select elements appearing on certain page loads

--- a/app/views/activities/_activity.html.haml
+++ b/app/views/activities/_activity.html.haml
@@ -47,6 +47,7 @@
       - if user_signed_in? && policy(activity).update?
         = render 'taggings/activity_tagging_list'
         = render 'taggings/form'
+        = render 'activity_links/new'
       - else
         - activity.tags.each do |tag|
           %li
