--- a/app/views/textbooks/show.html.haml
+++ b/app/views/textbooks/show.html.haml
@@ -8,7 +8,7 @@
       %p.full-textbook-year= @textbook.year_published
     %p.full.textbook-level= @textbook.level
     - unless @textbook.current?
-      %p.full-textbook-obselete (obselete)
+      %p.full-textbook-obsolete (obsolete)
 
   %table.textbook-page-listing
     %thead
