--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -1,4 +1,5 @@
 = image_tag "logo.png", class: "site-logo", alt: "ALTopedia logo"
+%div.logo-shadow
 %nav
   %ul.primary-nav
     %li.primary-nav-item
