Add a 'support' section

--- a/app/views/layouts/_footer.html.haml
+++ b/app/views/layouts/_footer.html.haml
@@ -3,7 +3,7 @@
   = link_to t('layouts.about'), about_path, class: "footer-link"
   = link_to t('layouts.contact'), contact_path, class: "footer-link"
   = link_to t('layouts.contributors'), contributors_path, class: "footer-link"
-  -# = link_to "Support the site", root_url, class: "footer-link"
+  = link_to t('layouts.support'), support_url, class: "footer-link"
 .footer-section
   = link_to t('layouts.grammar'), grammar_path, class: "footer-link"
   = link_to t('layouts.themes'), themes_path, class: "footer-link"
