--- a/app/views/site_pages/home.html.haml
+++ b/app/views/site_pages/home.html.haml
@@ -39,7 +39,7 @@
       %p.card-title Please help support the site!
       %p.card-text ALTopedia is ad-free and independent.
       %p.card-text The community is the sole source of funding. Please consider contributing to help keep the site alive.
-      = link_to "Check out the options!", contribute_path
+      = link_to "Support ALTopedia", support_path
     .fp-comment-ticker
       %ul.comment-ticker
         %p.ticker-title Recent comments
