--- a/app/views/activity_links/_new.html.haml
+++ b/app/views/activity_links/_new.html.haml
@@ -2,4 +2,4 @@
 = form_for ActivityLink.create do |f|
     =select_tag "activity_link[id]", id: "new-activity-link"
     = hidden_field_tag :inspired_id, @activity.id
-    = f.submit 'Link', class: "tagging-submit-button"
+    = f.submit 'Link', class: "tagging-submit-button", disabled: true
