added description to select options

--- a/app/views/activity_links/_new.html.haml
+++ b/app/views/activity_links/_new.html.haml
@@ -1,5 +1,5 @@
 %small Is this activity inspired by another activity? Link it here!
 = form_for ActivityLink.create do |f|
-    =select_tag "activity_link[id]", id: "new-activity-link"
+    = render 'activity_links/select'
     = hidden_field_tag :inspired_id, @activity.id
     = f.submit 'Link', class: "tagging-submit-button", disabled: true
